--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "tty.js",
   "description": "A terminal for your browser",
   "author": "Christopher Jeffrey",
-  "version": "0.2.13",
+  "version": "0.2.15",
+  "license": "MIT",
   "main": "./index.js",
   "bin": "./bin/tty.js",
   "man": "./man/tty.js.1",
@@ -15,8 +16,9 @@
   "dependencies": {
     "express": "3.4.4",
     "socket.io": "0.9.16",
-    "pty.js": "0.2.4",
-    "term.js": "0.0.3"
+    "pty.js": ">= 0.2.13",
+    "term.js": ">= 0.0.5",
+    "tail": ">= 1.1.0"
   },
   "engines": { "node": ">= 0.8.0" }
 }
